--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.chopapp"
+    namespace 'com.anonymous.ChopApp'
     defaultConfig {
-        applicationId "com.chopapp"
+        applicationId 'com.anonymous.ChopApp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
